Add clear buffer button

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8"/>
-  <title>Hello World</title>
+  <meta charset="utf-8" />
+  <title>Aurora</title>
   <style>
     canvas {
       background-color: black;
@@ -10,8 +11,9 @@
   </style>
   <link data-trunk rel="copy-dir" href="models" />
 </head>
+
 <body>
   <canvas id="aurora" width="600" height="400"></canvas>
 </body>
-</html>
 
+</html>
