Use shader preprocesser with appropriate macro-magic

--- a/index.html
+++ b/index.html
@@ -19,12 +19,18 @@
     body {
       background-color: #102009;
     }
+
+    p {
+      background-color: white;
+      color: black;
+      padding: 5px;
+    }
   </style>
   <link data-trunk rel="copy-dir" href="models" />
 </head>
 
 <body>
-  <div class="aurora-container">
+  <div class="aurora-container" id="aurora-container">
     <canvas id="aurora"></canvas>
   </div>
 </body>
