--- a/index.html
+++ b/index.html
@@ -2,37 +2,194 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <title>Aurora</title>
-  <style>
-    canvas {
-      background-color: black;
-    }
+    <meta charset="utf-8"/>
+    <title>Aurora</title>
+    <style>
+        :root {
+            --text: #f5f7ea;
+            --background: #111307;
+            --primary: #ccd795;
+            --secondary: #3e7f30;
+            --accent: #4bbb54;
+        }
 
-    div.aurora-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100vw;
-    }
+        canvas {
+            background-color: black;
+            width: min(96vw, 1600px);
+            height: min(85vh, 1000px);
+            max-width: 100%;
+            max-height: 100%;
+        }
 
-    body {
-      background-color: #102009;
-    }
+        div.aurora-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            flex: 1;
+            padding: 0 0 3rem;
+            min-height: calc(100vh - 8rem);
+        }
 
-    p {
-      background-color: white;
-      color: black;
-      padding: 5px;
-    }
-  </style>
-  <link data-trunk rel="copy-dir" href="models" />
+        body {
+            background-color: var(--background);
+            margin: 0;
+            font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+            color: var(--text);
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+        }
+
+        p {
+            background-color: var(--secondary);
+            color: var(--text);
+            padding: 5px;
+        }
+
+        nav.scene-nav {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 0.5rem;
+            align-items: center;
+            justify-content: center;
+            padding: 0.75rem 1rem;
+            background: var(--secondary);
+            border-bottom: 1px solid var(--accent);
+            color: var(--text);
+            margin-bottom: 1.5rem;
+        }
+
+        .scene-nav__label {
+            font-weight: 600;
+            letter-spacing: 0.05em;
+            text-transform: uppercase;
+            color: var(--text);
+        }
+
+        .scene-nav__items {
+            display: flex;
+            align-items: center;
+        }
+
+        .scene-nav__item {
+            border: none;
+            background: none;
+            color: var(--text);
+            font: inherit;
+            padding: 0;
+            margin: 0 0.85rem;
+            border-radius: 0;
+            cursor: pointer;
+            text-transform: uppercase;
+            letter-spacing: 0.08em;
+            position: relative;
+        }
+
+        .scene-nav__item:first-child {
+            margin-left: 0.5rem;
+        }
+
+        .scene-nav__item:last-child {
+            margin-right: 0;
+        }
+
+        .scene-nav__item + .scene-nav__item::before {
+            content: "";
+            position: absolute;
+            left: -0.85rem;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 1px;
+            height: 1.25rem;
+            background: rgba(245, 247, 234, 0.4);
+        }
+
+        .scene-nav__item::after {
+            content: "";
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: -0.35rem;
+            height: 2px;
+            background: var(--accent);
+            opacity: 0;
+            transition: opacity 0.2s ease;
+        }
+
+        .scene-nav__item:hover,
+        .scene-nav__item:focus-visible {
+            color: var(--accent);
+            outline: none;
+        }
+
+        .scene-nav__item:hover::after,
+        .scene-nav__item:focus-visible::after {
+            opacity: 1;
+        }
+    </style>
+    <link data-trunk rel="copy-dir" href="models"/>
 </head>
 
 <body>
-  <div class="aurora-container" id="aurora-container">
+<nav class="scene-nav" aria-label="Scene selector">
+    <span class="scene-nav__label" id="scene-nav-label">Loading scenes…</span>
+    <div class="scene-nav__items" id="scene-nav-items"></div>
+</nav>
+<div class="aurora-container" id="aurora-container">
     <canvas id="aurora"></canvas>
-  </div>
+</div>
+<script type="module">
+    const navLabel = document.getElementById("scene-nav-label");
+    const navItems = document.getElementById("scene-nav-items");
+
+    function renderSceneButtons(getScenes, setScene) {
+        if (!navItems || !navLabel) {
+            return;
+        }
+
+        navItems.textContent = "";
+        const scenes = Array.from(getScenes()).map((scene) => String(scene));
+
+        if (!scenes.length) {
+            navLabel.textContent = "No scenes available";
+            return;
+        }
+
+        navLabel.textContent = "Scenes";
+
+        scenes.forEach((scene) => {
+            const button = document.createElement("button");
+            button.type = "button";
+            button.className = "scene-nav__item";
+            button.textContent = scene;
+            button.addEventListener("click", () => setScene(scene));
+            navItems.appendChild(button);
+        });
+    }
+
+    window.addEventListener("AuroraInitialized", (event) => {
+        const wasm = window.wasmBindings
+        if (!wasm) {
+            console.warn("WASM bindings not initialized on AuroraInitialized event");
+            return;
+        }
+
+        const getScenes = wasm.get_available_scenes;
+        const setScene = wasm.set_scene;
+
+        if (typeof getScenes !== "function" || typeof setScene !== "function") {
+            console.warn("Scene bindings not found on wasm exports", wasm);
+            return;
+        }
+
+        try {
+            renderSceneButtons(getScenes, setScene);
+        } catch (error) {
+            console.error("Failed to populate scene navigation", error);
+        }
+    }, {once: true});
+</script>
 </body>
 
 </html>
